- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    6.1.0 FF
- 
    None
- 
        8bf87c7bcb2ffa83f3273147222859ab623390e1 (qt/qtdatavis3d/dev)
Conan build fails
- is required for
- 
                     QTBUG-88612
        Migrate Qt Data Visualization to Qt 6 QTBUG-88612
        Migrate Qt Data Visualization to Qt 6-         
- Closed
 
-         
| For Gerrit Dashboard: QTBUG-90737 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 332029,3 | Fix conan build errors | dev | qt/qtdatavis3d | Status: MERGED | +2 | 0 |