Fix conan build errors

Fixes: QTBUG-90737
Change-Id: Iab4a0f9d4ff3618dfb4c1675dfd731421de29f9f
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>